; ModuleID = '/home/carl/AnghaBench/tig/compat/extr_utf8proc.c_charbound_encode_char.c'
source_filename = "/home/carl/AnghaBench/tig/compat/extr_utf8proc.c_charbound_encode_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64*)* @charbound_encode_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @charbound_encode_char(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  store i32 %0, i32* %4, align 4
  store i64* %1, i64** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i64*, i64** %5, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 0
  store i64 255, i64* %13, align 8
  store i32 1, i32* %3, align 4
  br label %93

14:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %93

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = icmp slt i32 %16, 128
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = load i64*, i64** %5, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 0
  store i64 %20, i64* %22, align 8
  store i32 1, i32* %3, align 4
  br label %93

23:                                               ; preds = %15
  %24 = load i32, i32* %4, align 4
  %25 = icmp slt i32 %24, 2048
  br i1 %25, label %26, label %39

26:                                               ; preds = %23
  %27 = load i32, i32* %4, align 4
  %28 = ashr i32 %27, 6
  %29 = add nsw i32 192, %28
  %30 = sext i32 %29 to i64
  %31 = load i64*, i64** %5, align 8
  %32 = getelementptr inbounds i64, i64* %31, i64 0
  store i64 %30, i64* %32, align 8
  %33 = load i32, i32* %4, align 4
  %34 = and i32 %33, 63
  %35 = add nsw i32 128, %34
  %36 = sext i32 %35 to i64
  %37 = load i64*, i64** %5, align 8
  %38 = getelementptr inbounds i64, i64* %37, i64 1
  store i64 %36, i64* %38, align 8
  store i32 2, i32* %3, align 4
  br label %93

39:                                               ; preds = %23
  %40 = load i32, i32* %4, align 4
  %41 = icmp slt i32 %40, 65536
  br i1 %41, label %42, label %62

42:                                               ; preds = %39
  %43 = load i32, i32* %4, align 4
  %44 = ashr i32 %43, 12
  %45 = add nsw i32 224, %44
  %46 = sext i32 %45 to i64
  %47 = load i64*, i64** %5, align 8
  %48 = getelementptr inbounds i64, i64* %47, i64 0
  store i64 %46, i64* %48, align 8
  %49 = load i32, i32* %4, align 4
  %50 = ashr i32 %49, 6
  %51 = and i32 %50, 63
  %52 = add nsw i32 128, %51
  %53 = sext i32 %52 to i64
  %54 = load i64*, i64** %5, align 8
  %55 = getelementptr inbounds i64, i64* %54, i64 1
  store i64 %53, i64* %55, align 8
  %56 = load i32, i32* %4, align 4
  %57 = and i32 %56, 63
  %58 = add nsw i32 128, %57
  %59 = sext i32 %58 to i64
  %60 = load i64*, i64** %5, align 8
  %61 = getelementptr inbounds i64, i64* %60, i64 2
  store i64 %59, i64* %61, align 8
  store i32 3, i32* %3, align 4
  br label %93

62:                                               ; preds = %39
  %63 = load i32, i32* %4, align 4
  %64 = icmp slt i32 %63, 1114112
  br i1 %64, label %65, label %92

65:                                               ; preds = %62
  %66 = load i32, i32* %4, align 4
  %67 = ashr i32 %66, 18
  %68 = add nsw i32 240, %67
  %69 = sext i32 %68 to i64
  %70 = load i64*, i64** %5, align 8
  %71 = getelementptr inbounds i64, i64* %70, i64 0
  store i64 %69, i64* %71, align 8
  %72 = load i32, i32* %4, align 4
  %73 = ashr i32 %72, 12
  %74 = and i32 %73, 63
  %75 = add nsw i32 128, %74
  %76 = sext i32 %75 to i64
  %77 = load i64*, i64** %5, align 8
  %78 = getelementptr inbounds i64, i64* %77, i64 1
  store i64 %76, i64* %78, align 8
  %79 = load i32, i32* %4, align 4
  %80 = ashr i32 %79, 6
  %81 = and i32 %80, 63
  %82 = add nsw i32 128, %81
  %83 = sext i32 %82 to i64
  %84 = load i64*, i64** %5, align 8
  %85 = getelementptr inbounds i64, i64* %84, i64 2
  store i64 %83, i64* %85, align 8
  %86 = load i32, i32* %4, align 4
  %87 = and i32 %86, 63
  %88 = add nsw i32 128, %87
  %89 = sext i32 %88 to i64
  %90 = load i64*, i64** %5, align 8
  %91 = getelementptr inbounds i64, i64* %90, i64 3
  store i64 %89, i64* %91, align 8
  store i32 4, i32* %3, align 4
  br label %93

92:                                               ; preds = %62
  store i32 0, i32* %3, align 4
  br label %93

93:                                               ; preds = %92, %65, %42, %26, %18, %14, %11
  %94 = load i32, i32* %3, align 4
  ret i32 %94
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
